fix(checkout-modal): fix scrollbar on device mobile

--- a/packages/common/src/components/checkout-modal/checkout-modal.scss
+++ b/packages/common/src/components/checkout-modal/checkout-modal.scss
@@ -1,14 +1,16 @@
 .checkout-modal__container {
   display: flex;
   width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 30;
   background: transparent;
+  overflow: auto;
 
   @include md {
-    height: 100%;
+    overflow: hidden;
     justify-content: center;
     align-items: center;
     background: rgba(29, 31, 42, 0.8);
